Verknüpfug mit Frontend